# gitcloner

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: build-linux-x64.yml
migrations/: 001_initial.sql
src/: auth.rs  database.rs  git_manager.rs  handlers.rs  main.rs  models.rs
static/: app.js  index.html  styles.css
